# nox

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_zh_CN.md
.agents/: GOAL.md  PLAN.md
crates/nox/: Cargo.toml  README.md
crates/nox/benches/: runtime_capabilities.rs
crates/nox/examples/: rust_embedding.rs  rust_embedding_namespace.rs
crates/nox/src/: dap.rs  lib.rs  lsp.rs  main.rs  manifest.rs
crates/nox/src/lib/: crypto.rs  std_sources.rs  tests.rs
crates/nox/src/lib/std/: array.nox  bytes.nox  csv.nox  dotenv.nox  encoding.nox  env.nox  fs.nox  hash.nox  http.nox  ini.nox  json.nox  jsonl.nox  map.nox  option.nox  path.nox  process.nox  random.nox  result.nox  string.nox  task.nox  term.nox  test.nox  time.nox  toml.nox  traits.nox  tsv.nox  url.nox  xml.nox  yaml.nox
crates/nox/tests/: cli.rs
crates/nox_core/: Cargo.toml  README.md
crates/nox_core/benches/: core_paths.rs
crates/nox_core/include/: nox_core.h
crates/nox_core/src/: api_tests.rs  bytecode.rs  compiler_tests.rs  ffi.rs  heap.rs  language_tests.rs  lexer.rs  lib.rs  parser.rs  typecheck.rs  vm.rs
docs/: README.md  array-design.md  benchmarks.md  cli.md  development.md  diagnostics.md  directory-structure.md  embedding.md  heap-design.md  language-v0.md  module-system-design.md  option-result-implementation-plan.md  package-manifest-design.md  release-checklist.md  runtime.md  v0.0.2-design-drafts.md
examples/: README.md  arrays.nox  async.nox  bench-containers.nox  bench-module-leaf.nox  bench-modules.nox  bitwise.nox  collections-config.nox  collections-summary.nox  constants.nox  control-flow-let-patterns.nox  control-flow.nox  conversions.nox  data-formats.nox  delimited-text.nox  else-if.nox  enums.nox  error-summary.nox  example_test.nox  export-main.nox  export-math.nox  for-range.nox  formatter-golden.nox  fs-summary.nox  function-values.nox  generic-functions.nox  (+35 more)
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/parser/: basic.nox  control_flow.nox  malformed.nox
fuzz/corpus/typecheck/: containers.nox  mismatch.nox  patterns.nox
fuzz/corpus/verifier/: functions.nox  loops.nox  spread.nox
fuzz/fuzz_targets/: parser.rs  typecheck.rs  verifier.rs
(+179 files in other folders)
