[package]
name = "nox-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nox_core = { path = "../crates/nox_core" }

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "typecheck"
path = "fuzz_targets/typecheck.rs"
test = false
doc = false
bench = false

[[bin]]
name = "verifier"
path = "fuzz_targets/verifier.rs"
test = false
doc = false
bench = false
