[package]
name = "nox_core"
description = "Embeddable compiler, type checker, VM, Rust API, and C ABI for Nox"
edition.workspace = true
repository = "https://github.com/liguangsheng/nox"
readme = "README.md"
keywords = ["scripting", "language", "vm", "embedding"]
categories = ["compilers", "development-tools::ffi"]
license.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "core_paths"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
